--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <title></title>
 
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="dev/css/app-0.0.1.css">
+    <!-- <link rel="stylesheet" href="dev/app.css"> -->
+    <link rel="stylesheet" href="build/app.min.css">
+
   </head>
   <body>
     <h1>Testing!</h1>
 
-    <script src="build/app-0.0.1.js"></script>
-    <!-- <script src="build/app-0.0.1.js"></script> -->
+    <!-- <script src="dev/app-0.0.1.js"></script> -->
+    <script src="build/app-0.0.1.min.js"></script>
   </body>
 </html>
