getting some basic stuff to work

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>Test!</title>
 
-    <!-- <link rel="stylesheet" href="dev/app.css"> -->
-    <link rel="stylesheet" href="build/app.min.css">
-
+    <link rel="stylesheet" href="dev/app.css">
+    <!-- <link rel="stylesheet" href="build/app.min.css"> -->
   </head>
   <body>
-    <h1>Testing!</h1>
+    <header id="header">
 
-    <!-- <script src="dev/app-0.0.1.js"></script> -->
-    <script src="build/app-0.0.1.min.js"></script>
+    </header>
+
+
+    <script src="dev/app.js"></script>
+    <!-- <script src="build/app-0.0.1.js"></script> -->
   </body>
 </html>
