This is what I wanted it to do. NICE working version starts here~

--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,61 @@
 
     <link rel="stylesheet" href="assets/stylesheets/app.css">
   </head>
+  
   <body>
-    <header id="header">
+    <div id="site">
+      <header id="header">
+        <div class="container">
+          hello everybody!
+        </div>
+      </header>
 
-    </header>
+      <nav id="main-nav">
+        <div class="container">
+          <div id="logo">Logo</div>
+          <div id="five columns">
+            <a href="">Go</a>
+            <a href="">No</a>
+          </div>
+        </div>
+      </nav>
 
+      <section id="content">
+        <div class="container">
+          <div class="six columns">
+            more or less!
+          </div>
+
+          <div class="ten columns">
+            <h2>The word is bird</h2>
+            <p>
+              I guess the first step was that I found myself in a rut. The job I had as a graphic designer wasn't fulfilling me. I'd been seduced by the whims of Western Society, wanting a mortgage and money. I woke up on my 25th birthday and decided things weren't going to change themselves, so I needed to make a change.
+            </p>
+
+            <p>
+              I still had a mortgage to pay and had to work, but I wanted to pursue new avenues – then along came the skateboard. I loved snowboarding, but being in Wales there's not much snow, so I got myself a skateboard to relive the feeling of snowboarding.
+            </p>
+
+            <p>
+
+              I quit my job and decided to go skateboarding. I went from John o' Groats to Land's End as a warm up before skating from Perth to Brisbane, which was the longest skateboard journey ever! After that I got my first book deal and here I am now.
+            </p>
+          </div>
+
+
+        </div>
+      </section>
+      
+      <footer id="footer">
+        foot links!
+      </footer>
+    </div><!-- end #site -->
 
     <script src="assets/javascripts/app.js"></script>
+    <script>
+      $(function(){ 
+        App.initialize() 
+      });
+    </script>
   </body>
 </html>
