Removed the fonts, added client side tests

--- a/www/back.html
+++ b/www/back.html
@@ -28,7 +28,6 @@
         <div class="overlay"></div>
         <div class="container">
           <div id="hero-copy" class="ten columns">
-            <h3 id="sale">50% off!</h3>
             <h1>cool headlines work</h1>
             <h2>for WORK & for PLAY and<br/> LIFE in between</h2>
             <a class="btn btn-clear white">Shop online??</a>
@@ -108,8 +107,10 @@
           <div class="six columns">
             <h3>How to make it work</h3>
             <p>
-              <small>
-              I guess the first step was that I found myself in a rut. The job I had as a graphic designer wasn't fulfilling me.</small>
+                <small>
+                  I guess the first step was that I found myself in a rut.
+                  The job I had as a graphic designer wasn't fulfilling me.
+                </small>
             </p>
             <a href="">on Polyvore</a>
           </div>
