--- a/www/index.html
+++ b/www/index.html
@@ -8,30 +8,106 @@
 
   <body>
     <div id="site">
- 
+      <nav id="main-nav" class="static">
+        <div class="container">
+          <div class="five columns">
+            <a id="logo"><span>Logo</span></a>
+          </div>
+          <div id="nav-options" class="five columns offset-by-six omega">
+            <span>hello there,</span>
+            <a class="sign-in">sign in</a>
+            <a href="" title="menu" class="shopping-bag">
+              <span class="count">2</span>
+              <span class="ico ico-bag"></span>
+            </a>
+          </div>
+        </div>
+      </nav>
 
-      <header id="header">
-        <div id="cover" class="container">
-          <div id="hero-copy">
+      <header id="hero">
+        <div id="cover"></div>
+        <div id="overlay"></div>
+
+        <div id="hero-copy" class="container">
+          <div id="hero-cta" class="nine columns">
             <h3 id="sale">50% off!</h3>
             <h1>cool headlines work</h1>
-            <h2>for WORK & for PLAY and<br/> LIFE in between</h2>
+            <h2 class="sans-serif">for WORK & for PLAY and<br/> LIFE in between</h2>
             <a class="btn btn-clear white">Shop online??</a>
           </div>
         </div>
-
       </header>
 
       <section id="store">
         <div class="container">
           <div class="row">
-            <div class="sixteen columns">
-              <h2>Make & Model</h2>
-            </div>
-          </div>
+            <div id="item-description" class="eight columns">
+              <h2 class="sans-serif">Things go in here</h2>
+              <div class="price">
+                <span class="curr">$</span><span class="dollar">88</span><span class="cents">00</span>
+              </div>
+              <p>
+                A brief descriptive text item goes here should be great copy with humor and 
+                personality mixed into the copy.
+              </p>
 
+              <p>
+                <small>
+                  Hand crafted silk. REal 100% leather. </small>
+              </p>
+            </div>
+            
+            <div id="store-checkout" class="eight columns">
+
+              <form id="store-form" class="row">
+                <div class="field five columns alpha">
+                  <div class="drop-down">
+                    <div class="selector">
+                      <div class="selected-item">Choose a size</div>
+                      <div class="control"><span class="ico ico-plus"></span></div>
+                    </div>
+
+                    <div class="slider">
+                      <div class="slide-item">
+                        Small
+                      </div>
+
+                      <div class="slide-item">
+                        Medium
+                      </div>
+
+                      <div class="slide-item">
+                        Large
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="action three columns omega">
+                  <button class="btn btn-clear">buy this now</button>
+                </div>
+              </form>
+              <ul class="payments-accepted">
+                <li class="visa"><span>Visa</span></li>
+                <li class="mastercard"><span>Mastercard</span></li>
+                <li class="amex"><span>American Express</span></li>
+                <li class="discover"><span>Discover</span></li>
+              </ul>
+
+              <ol>
+                <li>Free shipping on $100</li>
+                <li>No hassle returns</li>
+              </ol>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section id="show-room">
+        <div class="container">
           <div class="eight columns">
-            <p>
+            <h3 class="sans-serif">Detail Product descriptions here!</h3>
+            <p class="preamble">
               When normal humans get together around a campfire, they tell fanciful tales of unreal creatures. Conversely, when unreal creatures get together around a campfire, they tell stories about normal human beings. 
             </p>
 
@@ -46,13 +122,11 @@
             <p>
               A man and a woman are in a relationship. The woman wants to leave their hometown and move to the city. The man wants to stay in the hometown because that's where he's always lived. The couple tries to find a compromise, but they can't so… THEY BREAK UP! 
             </p>
-
           </div>
 
           <div class="eight columns">
             <div id="store-gallery">
             </div>
-
           </div>
         </div>
       </section>
