--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
       <nav id="main-nav" class="static">
         <div class="container">
           <div class="five columns">
-            <a id="logo"><span>Logo</span></a>
+            <a id="logo"><span>Bibster</span><sup>&copy;</sup></a>
           </div>
           <div id="nav-options" class="five columns offset-by-six omega">
             <span>hello there,</span>
@@ -41,62 +41,40 @@
       <section id="store">
         <div class="container">
           <div class="row">
-            <div id="item-description" class="eight columns">
-              <h2 class="sans-serif">Things go in here</h2>
-              <div class="price">
-                <span class="curr">$</span><span class="dollar">88</span><span class="cents">00</span>
+            <div id="item-description" class="eleven columns">
+              <img src="assets/images/product.jpg" />
+
+              <div id="">
+                <img src="assets/images/product_thumb.jpg" />
               </div>
-              <p>
-                A brief descriptive text item goes here should be great copy with humor and 
-                personality mixed into the copy.
-              </p>
-
-              <p>
-                <small>
-                  Hand crafted silk. REal 100% leather. </small>
-              </p>
             </div>
-            
-            <div id="store-checkout" class="eight columns">
 
+            <div id="store-checkout" class="five columns">
+              $12.00
               <form id="store-form" class="row">
-                <div class="field five columns alpha">
-                  <div class="drop-down">
-                    <div class="selector">
-                      <div class="selected-item">Choose a size</div>
-                      <div class="control"><span class="ico ico-plus"></span></div>
-                    </div>
-
-                    <div class="slider">
-                      <div class="slide-item">
-                        Small
-                      </div>
-
-                      <div class="slide-item">
-                        Medium
-                      </div>
-
-                      <div class="slide-item">
-                        Large
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="action three columns omega">
                   <button class="btn btn-clear">buy this now</button>
-                </div>
               </form>
+
+              in stock!
+              <p>
+                Only <strong>92</strong> remaining!
+              </p>
+
+              <p>
+                Order within the next <strong>15h 30m 20s</strong>
+                and it <strong>ships today</strong>!
+              </p>
+
+              <p>
+                <em> 20 second checkout!</em>
+              </p>
               <ul class="payments-accepted">
-                <li class="visa"><span>Visa</span></li>
-                <li class="mastercard"><span>Mastercard</span></li>
-                <li class="amex"><span>American Express</span></li>
-                <li class="discover"><span>Discover</span></li>
+                <li class="visa">Visa</li>
+                <li class="mastercard">Mastercard</li>
+                <li class="amex">American Express</li>
+                <li class="discover">Discover</li>
               </ul>
 
-              <ol>
-                <li>Free shipping on $100</li>
-                <li>No hassle returns</li>
-              </ol>
             </div>
 
           </div>
@@ -105,10 +83,10 @@
 
       <section id="show-room">
         <div class="container">
-          <div class="eight columns">
+          <div id="copy-content" class="eight columns">
             <h3 class="sans-serif">Detail Product descriptions here!</h3>
             <p class="preamble">
-              When normal humans get together around a campfire, they tell fanciful tales of unreal creatures. Conversely, when unreal creatures get together around a campfire, they tell stories about normal human beings. 
+              When normal humans get together around a campfire, they tell fanciful tales of unreal creatures. Conversely, when unreal creatures get together around a campfire, they tell stories about normal human beings.
             </p>
 
             <p>
@@ -116,11 +94,11 @@
             </p>
 
             <p>
-              A man looks at an apartment to rent. He likes it but needs a night to sleep on it. When he wakes up, he calls the realtor only to find that the apartment has been… TAKEN BY SOMEONE ELSE! 
+              A man looks at an apartment to rent. He likes it but needs a night to sleep on it. When he wakes up, he calls the realtor only to find that the apartment has been… TAKEN BY SOMEONE ELSE!
             </p>
 
             <p>
-              A man and a woman are in a relationship. The woman wants to leave their hometown and move to the city. The man wants to stay in the hometown because that's where he's always lived. The couple tries to find a compromise, but they can't so… THEY BREAK UP! 
+              A man and a woman are in a relationship. The woman wants to leave their hometown and move to the city. The man wants to stay in the hometown because that's where he's always lived. The couple tries to find a compromise, but they can't so… THEY BREAK UP!
             </p>
           </div>
 
@@ -136,7 +114,7 @@
 
       <footer id="footer">
         <div class="container">
-          
+
         </div>
         <p class="copy clear">
           ©2014 All Rights Reserved. Company&copy;
