Added in eco template compiling

--- a/www/index.html
+++ b/www/index.html
@@ -123,6 +123,7 @@
     </div><!-- end #site -->
 
     <script src="assets/javascripts/app.js"></script>
+    <script src="assets/templates/templates.js"></script>
     <script>
       $(function(){
         App.initialize()
