--- a/www/tests/index.html
+++ b/www/tests/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,6 +9,7 @@
   <body>
     <div id="mocha"></div>
 
+    <script src="/assets/templates/templates.js"></script>
     <script src="/assets/javascripts/app.js"></script>
 
     <script src="/tests/js/mocha.js"></script>
