--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div id="application">
-      <nav id="main-nav" class="hidden">
+      <nav id="main-nav">
         <div class="container">
           <div class="five columns">
             <a id="logo"><span>Bibster</span><sup>&copy;</sup></a>
