DERBY ultimate 48 ad campaign here!

--- a/www/index.html
+++ b/www/index.html
@@ -3,123 +3,49 @@
   <head>
     <title>Test!</title>
 
-    <link rel="stylesheet" href="assets/stylesheets/app.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
 
   <body>
     <div id="application">
-      <nav id="main-nav">
-        <div class="container">
-          <div class="five columns">
-            <a id="logo"><span>Bibster</span><sup>&copy;</sup></a>
-          </div>
-          <div id="nav-options" class="five columns offset-by-six omega">
-            <span>hello there,</span>
-            <a class="sign-in">sign in</a>
-            <a id="nav-cart" title="menu" class="shopping-bag">
-              <span class="count">2</span>
-              <span class="ico ico-bag"></span>
-            </a>
-          </div>
-        </div>
-      </nav>
 
       <section id="hero">
         <div id="cover"></div>
-        <div id="overlay"></div>
-
-        <a id="arr-next" class="arr"></a>
-        <a id="arr-prev" class="arr"></a>
-
-        <div id="hero-copy" class="container">
-          <div id="hero-cta" class="nine columns">
-            <h3 id="sale">50% off!</h3>
-            <h1>cool headlines work</h1>
-            <h2 class="sans-serif">for WORK & for PLAY and<br/> LIFE in between</h2>
-            <a class="btn btn-clear white">Shop online??</a>
+        <div id="overlay">
+          <div id="won">
           </div>
         </div>
+        <div id="cta">
+          <div id="logo"></div>
+          <h1>You've Won <strong>6</strong> Entry Tickets</h1>
+
+          <a class="btn cta-btn">Claim now</a>
+
+        </div>
+
       </section>
 
       <section id="store">
         <div class="container">
           <div class="row">
-            <div id="item-description" class="eleven columns">
-              <img src="assets/images/product.jpg" />
+            <div id="item-description" class="ten columns offset-by-three">
 
-              <div id="">
-                <img src="assets/images/product_thumb.jpg" />
-              </div>
-            </div>
-
-            <div id="store-checkout" class="five columns">
-              $12.00
-              <form id="store-form" class="row">
-                  <button class="btn btn-clear">buy this now</button>
-              </form>
-
-              in stock!
+              <div id="info"></div>
+              <h3>Ultimate 48hrs of Racing</h3>
               <p>
-                Only <strong>92</strong> remaining!
+                Take three of your friends from coast to coast for a wild VIP weekend of racing.
+                Ever wonder what it’s like to be a big-race jockey and fly across the country for a big race? Now you won't have to.
+              </p>
+              <p>
+                The winner will receive clubhouse seating for both races, airfare to the big events, luxury hotel accommodations, clothing and another $1,000 for gambling.
               </p>
 
-              <p>
-                Order within the next <strong>15h 30m 20s</strong>
-                and it <strong>ships today</strong>!
-              </p>
-
-              <p>
-                <em> 20 second checkout!</em>
-              </p>
-              <ul class="payments-accepted">
-                <li class="visa">Visa</li>
-                <li class="mastercard">Mastercard</li>
-                <li class="amex">American Express</li>
-                <li class="discover">Discover</li>
-              </ul>
-
+              <p><a class="btn cta-btn">Claim your 6 Tickets</a><p>
             </div>
 
           </div>
         </div>
       </section>
-
-      <section id="show-room">
-        <div class="container">
-          <div id="copy-content" class="eight columns">
-            <h3 class="sans-serif">Detail Product descriptions here!</h3>
-            <p class="preamble">
-              When normal humans get together around a campfire, they tell fanciful tales of unreal creatures. Conversely, when unreal creatures get together around a campfire, they tell stories about normal human beings.
-            </p>
-
-            <p>
-              Here are some popular scary campfire stories that unicorns tell:
-            </p>
-
-            <p>
-              A man looks at an apartment to rent. He likes it but needs a night to sleep on it. When he wakes up, he calls the realtor only to find that the apartment has been… TAKEN BY SOMEONE ELSE!
-            </p>
-
-            <p>
-              A man and a woman are in a relationship. The woman wants to leave their hometown and move to the city. The man wants to stay in the hometown because that's where he's always lived. The couple tries to find a compromise, but they can't so… THEY BREAK UP!
-            </p>
-          </div>
-
-          <div class="eight columns">
-            <div id="store-gallery">
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <footer id="footer">
-        <div class="container">
-
-        </div>
-        <p class="copy clear">
-          ©2014 All Rights Reserved. Company&copy;
-        </p>
-      </footer>
     </div><!-- end #site -->
 
     <script src="assets/templates/templates.js"></script>
